[tool.poetry]
name = "refuse"
version = "0.1.0"
description = ""
authors = ["Giovanni Giacco <giovanni.giacco@unina.it>"]

[tool.poetry.dependencies]
python = "^3.8"
xarray = "^2022.6.0"
rioxarray = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
